# runfox

./: LICENSE  README.md  pyproject.toml  setup.py
examples/ops/: accumulation.py  branch_halt.py  fan_in.py  fan_out.py  retry.py  single_step.py  stack_machine.py
examples/uses/: conways_game_of_life.py  document_parser.py  fibonacci.py  fibonacci_async.py  multisource.py  validation.py
runfox/: __init__.py  _version.py  results.py  status.py  workflow.py
runfox/backend/: __init__.py  aws.py  base.py  inmemory_store.py  inprocess_runner.py  inprocess_worker.py  models.py  runner.py  sqlite_runner.py  sqlite_store.py  store.py
tests/: conftest.py  test_aws.py  test_backend.py  test_dispatch_return.py  test_functional_core.py  test_inprocess.py  test_models.py  test_run_examples.py  test_sqlite.py  test_state_change_event.py  test_status.py  test_workflow.py
